# inbx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  SECURITY.md  deny.toml  release-plz.toml
.github/: keep-a-changelog.toml
.github/workflows/: ci.yml  hjkl-watch.yml  pages.yml  release-plz.yml  release.yml
apps/inbx/: CHANGELOG.md  Cargo.toml
apps/inbx-gui/: CHANGELOG.md  Cargo.toml
apps/inbx-gui/src/: main.rs
apps/inbx-sync/: CHANGELOG.md  Cargo.toml
apps/inbx-sync/src/: main.rs
apps/inbx/src/: art.txt  main.rs  mbox.rs  tui.rs
apps/inbx/src/tui/: app.rs  binds.rs  keys.rs  mod.rs  picker.rs  render.rs  splash.rs  tasks.rs  wizard.rs
crates/inbx-composer/: CHANGELOG.md  Cargo.toml
crates/inbx-composer/src/: identity.rs  lib.rs  templates.rs
crates/inbx-config/: CHANGELOG.md  Cargo.toml
crates/inbx-config/src/: autoconfig.rs  lib.rs  theme.rs
crates/inbx-contacts/: CHANGELOG.md  Cargo.toml
crates/inbx-contacts/migrations/: 0001_init.sql  0002_pgp.sql
crates/inbx-contacts/src/: carddav.rs  lib.rs
crates/inbx-core/: CHANGELOG.md  Cargo.toml
crates/inbx-core/src/: lib.rs
crates/inbx-dav/: Cargo.toml
crates/inbx-dav/src/: lib.rs
crates/inbx-ical/: CHANGELOG.md  Cargo.toml
crates/inbx-ical/src/: caldav.rs  lib.rs
crates/inbx-ipc/: Cargo.toml
crates/inbx-ipc/src/: client.rs  event.rs  lib.rs  path.rs  server.rs
crates/inbx-net/: CHANGELOG.md  Cargo.toml
crates/inbx-net/src/: graph.rs  idle.rs  imap.rs  jmap.rs  lib.rs  mdn.rs  oauth.rs  provider.rs  proxy.rs  sieve.rs  smtp.rs  unsubscribe.rs
crates/inbx-net/tests/: proxy_smoke.rs
crates/inbx-pgp/: Cargo.toml
crates/inbx-pgp/src/: config.rs  error.rs  gnupg.rs  inbx_managed.rs  lib.rs  mime.rs  wkd.rs
crates/inbx-pgp/tests/: config_roundtrip.rs  gnupg_smoke.rs  inbx_managed_round_trip.rs  mime_roundtrip.rs
crates/inbx-render/: CHANGELOG.md  Cargo.toml
crates/inbx-render/src/: auth.rs  lang.rs  lib.rs  pgp.rs  phishing.rs
crates/inbx-render/tests/: autocrypt_harvest.rs  pgp_render.rs
crates/inbx-store/: CHANGELOG.md  Cargo.toml
crates/inbx-store/benches/: store.rs
crates/inbx-store/migrations/: 0001_init.sql  0002_search_thread.sql  0003_outbox.sql  0004_graph_delta.sql  0005_jwz_threading.sql  0006_provider_id.sql
crates/inbx-store/src/: lib.rs  threading.rs
crates/inbx-store/tests/: threading_jwz.rs
crates/inbx-sync/: Cargo.toml
crates/inbx-sync/src/: lib.rs
docs/: perf-budgets.md  threat-model.md
pkg/alpine/: .gitignore  APKBUILD.in
pkg/aur/: PKGBUILD-bin.in
pkg/homebrew/: inbx.rb.in
web/: 404.html  CNAME  index.html  manifest.json  robots.txt  sitemap.xml
xtask/: Cargo.toml
xtask/src/: main.rs
