[workspace]
resolver = "2"
members = [
    "crates/inbx-core",
    "crates/inbx-net",
    "crates/inbx-store",
    "crates/inbx-config",
    "crates/inbx-render",
    "crates/inbx-contacts",
    "crates/inbx-ical",
    "crates/inbx-composer",
    "apps/inbx",
    "apps/inbx-gui",
    "apps/inbx-sync",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/kryptic-sh/inbx"
homepage = "https://kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
keyring = "3"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# GUI
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.31"

# IMAP / TLS
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "0.26"

# Mail parsing
mail-parser = "0.10"
ammonia = "4"
html2text = "0.13"
icalendar = "0.16"

# SMTP
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "ring", "webpki-roots"] }

# OAuth2
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
url = "2"
base64 = "0.22"

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }

# CLI helpers
rpassword = "7"
gethostname = "0.5"
notify-rust = "4"

inbx-core = { path = "crates/inbx-core" }
inbx-net = { path = "crates/inbx-net" }
inbx-store = { path = "crates/inbx-store" }
inbx-config = { path = "crates/inbx-config" }
inbx-render = { path = "crates/inbx-render" }
inbx-contacts = { path = "crates/inbx-contacts" }
inbx-ical = { path = "crates/inbx-ical" }
inbx-composer = { path = "crates/inbx-composer" }

# hjkl pinned to 0.0.15 (.github/hjkl-version.txt). We consume runtime::*
# today; migration to spec::* lands when 0.1.0 ships traits — the
# `inbx — hjkl release watcher` Claude routine notices new releases and
# opens an integration PR.
hjkl-editor = "=0.0.38"
hjkl-buffer = { version = "=0.0.38", features = ["ratatui"] }
hjkl-engine = { version = "=0.0.38", features = ["crossterm"] }

mail-builder = "0.4"

# Local-dev override: point hjkl-* crates at the in-tree checkout so
# we can iterate against unreleased changes without waiting on the
# crates.io publish rate limit. Comment out once the matching tag
# publishes and the release-watcher routine has caught up.
[patch.crates-io]
hjkl-buffer = { path = "../hjkl/crates/hjkl-buffer" }
hjkl-engine = { path = "../hjkl/crates/hjkl-engine" }
hjkl-editor = { path = "../hjkl/crates/hjkl-editor" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
