[workspace]
resolver = "2"
members = [
    "crates/inbx-net",
    "crates/inbx-store",
    "crates/inbx-config",
    "crates/inbx-pgp",
    "crates/inbx-render",
    "crates/inbx-dav",
    "crates/inbx-contacts",
    "crates/inbx-ical",
    "crates/inbx-composer",
    "crates/inbx-ipc",
    "crates/inbx-sync",
    "apps/inbx",
    "apps/inbx-sync",
    "xtask",
]
default-members = ["apps/inbx"]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/kryptic-sh/inbx"
homepage = "https://kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hjkl-config = "0.2"
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
    "vendored",
] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1"

# TUI
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }

# IMAP / TLS
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
tokio-socks = "0.5"

# Mail parsing
mail-parser = "0.10"
ammonia = "4"
html2text = "0.13"
icalendar = "0.16"

# SMTP
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "ring", "webpki-roots"] }

# OAuth2
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
url = "2"
base64 = "0.22"

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# CLI helpers
rpassword = "7"
gethostname = "0.5"
notify-rust = "4"

inbx-net = { version = "0.5.0", path = "crates/inbx-net" }
inbx-store = { version = "0.5.0", path = "crates/inbx-store" }
inbx-config = { version = "0.5.0", path = "crates/inbx-config" }
inbx-pgp = { version = "0.5.0", path = "crates/inbx-pgp" }
inbx-render = { version = "0.5.0", path = "crates/inbx-render" }
inbx-dav = { version = "0.5.0", path = "crates/inbx-dav" }
inbx-contacts = { version = "0.5.0", path = "crates/inbx-contacts" }
inbx-ical = { version = "0.5.0", path = "crates/inbx-ical" }
inbx-composer = { version = "0.5.0", path = "crates/inbx-composer" }
inbx-ipc = { version = "0.5.0", path = "crates/inbx-ipc" }
inbx-sync = { version = "0.5.0", path = "crates/inbx-sync" }

# PGP
pgp = "0.19"
sha1 = "0.10"
async-trait = "0.1"
tempfile = "3"
which = "8"

# hjkl deps use caret-minor pins; consumers track minor bumps from crates.io.
hjkl-splash = "0.1"
hjkl-bonsai = "0.5"
hjkl-editor = "0.3"
hjkl-buffer = { version = "0.3", features = ["ratatui"] }
hjkl-engine = { version = "0.3", features = ["crossterm"] }
hjkl-clipboard = "0.5"
hjkl-form = "0.3"
hjkl-picker = "0.3"
hjkl-ratatui = "0.3"

mail-builder = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
