[package]
name = "inbx-sync-bin"
description = "inbx-sync — multi-account IMAP IDLE sync daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "inbx-sync"
path = "src/main.rs"

[dependencies]
inbx-sync.workspace = true
inbx-ipc.workspace = true
inbx-config.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
directories = "6"
