[package]
name = "inbx"
description = "inbx — modal-vim email client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "inbx"
path = "src/main.rs"

[features]
tree-sitter = ["inbx-render/tree-sitter", "dep:hjkl-bonsai"]

[dependencies]
hjkl-bonsai = { workspace = true, optional = true }
inbx-ipc.workspace = true
inbx-config.workspace = true
inbx-dav.workspace = true
inbx-pgp.workspace = true
inbx-net.workspace = true
inbx-store.workspace = true
inbx-render.workspace = true
inbx-contacts.workspace = true
inbx-ical.workspace = true
inbx-composer.workspace = true
hjkl-splash.workspace = true
hjkl-editor.workspace = true
hjkl-engine.workspace = true
hjkl-clipboard.workspace = true
hjkl-form.workspace = true
hjkl-picker.workspace = true
hjkl-ratatui.workspace = true
mail-parser.workspace = true
mail-builder.workspace = true
notify-rust.workspace = true
directories = "5"
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
rpassword.workspace = true
gethostname.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures-util.workspace = true
