[package]
name = "inbx-composer"
description = "inbx composer: hjkl-editor wrapper + MIME builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
inbx-core.workspace = true
thiserror.workspace = true
# hjkl deps wired at M6 once hjkl 0.1.0 ships `spec::*` traits.
