[package]
name = "inbx-composer"
description = "inbx composer: hjkl-editor wrapper + MIME builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
inbx-core.workspace = true
inbx-config.workspace = true
thiserror.workspace = true
serde.workspace = true
mail-parser.workspace = true
mail-builder.workspace = true
hjkl-editor.workspace = true
hjkl-buffer.workspace = true
hjkl-clipboard.workspace = true
