[package]
name = "inbx-config"
description = "inbx config: TOML loader, XDG paths, OS keyring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
inbx-core.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
keyring.workspace = true
thiserror.workspace = true
tracing.workspace = true
