[package]
name = "inbx-contacts"
description = "inbx contacts: address book + autocomplete"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
inbx-config.workspace = true
inbx-pgp.workspace = true
inbx-dav.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
sqlx.workspace = true
mail-parser.workspace = true
reqwest.workspace = true
async-trait.workspace = true
