[package]
name = "inbx-core"
description = "inbx core: state, message model, sync engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
