[package]
name = "inbx-ical"
description = "inbx ical: invite display + RSVP"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
inbx-core.workspace = true
thiserror.workspace = true
mail-parser.workspace = true
icalendar.workspace = true
