[package]
name = "inbx-net"
description = "inbx network: IMAP, SMTP, JMAP, Graph, OAuth2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
inbx-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
