[package]
name = "inbx-net"
description = "inbx network: IMAP, SMTP, JMAP, Graph, OAuth2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
inbx-core.workspace = true
inbx-config.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
futures-util.workspace = true
async-imap.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
mail-parser.workspace = true
lettre.workspace = true
oauth2.workspace = true
reqwest.workspace = true
url.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
