[package]
name = "inbx-render"
description = "inbx render: HTML sanitize + remote-content gate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
inbx-core.workspace = true
thiserror.workspace = true
