[package]
name = "inbx-render"
description = "inbx render: HTML sanitize + remote-content gate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
mail-parser.workspace = true
ammonia.workspace = true
html2text.workspace = true
inbx-pgp.workspace = true
async-trait.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile.workspace = true
