[package]
name = "inbx-sync"
description = "inbx-sync — sync engine library (multi-account IMAP IDLE loop)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
inbx-ipc.workspace = true
inbx-config.workspace = true
inbx-net.workspace = true
inbx-store.workspace = true
inbx-render.workspace = true
inbx-contacts.workspace = true
mail-parser.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
notify-rust.workspace = true
